fix review name-url alignment

--- a/app/assets/stylesheets/blocks/b-review.sass
+++ b/app/assets/stylesheets/blocks/b-review.sass
@@ -44,6 +44,7 @@
       margin-top: -4px
 
     .name-url
+      align-items: baseline
       display: flex
 
       .name
@@ -53,7 +54,6 @@
       .to-review
         +ellipsis2
         +link
-        align-self: flex-end
         font-size: 11px
 
         +iphone
